# kevin_test

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  default_input.json  docker-compose.yaml  docker-compose.yml  main.py  noise.py  requirements.txt  setup.py
.github/workflows/: build.yaml  build_images.yaml  build_images.yml  kevin_test.yaml  pr_review.yaml  test.yaml
Trillium/: identity_check_lys.py  lys.py  option.txt  relic_simulate.py  test_lys.py  test_lys_package.sh
Trillium/src/cpp_compiler/: CMakeLists.txt  LysCompiler.cpp  LysCompiler.hpp  Makefile  Operation.cpp  Operation.hpp  Rotation.cpp  Rotation.hpp  runLysCompiler.cpp
Trillium/src/cpp_tests/: Makefile  test_LysCompiler.cpp
Trillium/src/python_wrapper/: Rotation.py
Trillium/utils/: Translator.py  decompose.py  parse.py
Trillium/utils/tests/: test_parse.py
api/: main.py  requirements.txt
api/models/: requests.py  responses.py
compiler/: Dockerfile_compiler  compiler_smoke_tests.py  config.py
compiler/data/: compiler_input_test.txt  payload.json
compiler/tests/: test_compile.py
config/: server.conf
data/input/: default_input.json
data/input/Edge_Files/: edge_file1.txt  edge_file10.txt  edge_file11.txt  edge_file2.txt  edge_file4.txt  edge_file5.txt  edge_file7.txt  edge_file8.txt  edge_file9.txt  generated_graph.txt
data/input/molecule_circuits/: sk_mol_HH_recdep_4_dep_4.qasm
data/input/test_circuits/: HH_0025_postSK.qasm  projectq_measure_anc.txt  projectq_measure_anc_short.txt  projectq_measure_anc_short_with_rz.txt  (+13 more)
data/outputs/: Compiled_sk_mol_HH_recdep_2_dep_4_20230224-04-07_QREreport.txt
docker/: Dockerfile_api  Dockerfile_worker  Dockerfile_worker_julia
ftqc/: Dockerfile_ftqc  config.py  ftqc_smoke_tests.py
ftqc/tests/: test_emulate.py
infrastructure/: jenkinsfile_smoke_tests
logger/: logger_config.py  redis_logger.py
output/: Compiled_qasm_test_10_lines_20230405-16-35.txt  Compiled_qasm_test_5_lines_20230405-00-40.txt
pre/: Dockerfile_pre  config.py  pre_smoke_tests.py
pre/data/: payload.json
pre/tests/: test_estimate.py
qare/: Dockerfile_qare  config.py  qare_smoke_tests.py
qare/data/: payload.json
qare/tests/: test_generate_report.py
qarrot-optimizer/: Cargo.toml  README.md
qarrot-optimizer/.cargo/: config.toml
qarrot-optimizer/.github/workflows/: rust.yml
qarrot-optimizer/src/: basis.rs  bits.rs  buffer.rs  chunk_iter.rs  clifford.rs  input.rs  main.rs  operation.rs  optimization.rs  output.rs  symplectic.rs  tester.rs
qarrot-optimizer/src/basis/: dbasis.rs  sbasis.rs
qarrot-optimizer/src/bits/: b256.rs  bit_traits.rs
qarrot-optimizer/src/input/: lexer.rs  parser.rs
qarrot-optimizer/src/operation/: angle.rs  phase.rs
qarrot-optimizer/src/optimization/: partition.rs  partitions.rs  push_t_forward.rs  rotation_combination.rs
qarrot-optimizer/src/qasm/: lexer.rs  parser.rs
qarrot-optimizer/test_circuits/expected/: cx.txt  h.txt  min4.txt  molHH.txt  p1.txt  p2.txt  p2c.txt  p3.txt  p4.txt  p6.txt  q100.txt  q500.txt  qasm_test_1000.txt  qasm_test_10000.txt  qasm_test_100000.txt  qasm_test_50.txt  qasm_test_5000.txt  y.txt
qarrot-optimizer/test_circuits/input/: cx.txt  h.txt  min4.txt  molHH.txt  p1.txt  p2.txt  p2c.txt  p3.txt  p4.txt  p6.txt  q100.txt  q500.txt  qasm_test_10.txt  qasm_test_1000.txt  qasm_test_10000.txt  qasm_test_10_lines_with_rz.txt  qasm_test_50.txt  qasm_test_5000.txt  x.txt  y.txt
shared/: database_client.py  requirements.txt
shared/rest_client/: healthcheck.py  qarrot_client.py
shared/tests/: test_healthcheck.py
sk/: Dockerfile_sk  config.py  sk_smoke_tests.py
sk/data/: payload.json  sk_input_test.qasm
sk/tests/: test_decompose.py
skalg/: gate_library.jl  gate_sequence.jl  gate_synthesis.jl  gates.jl  main.jl  parser.jl  qiskit_sk.py  skalg.jl  test.jl  utils.jl
skalg/notebooks/: qiskit_sk_test.ipynb
src/: input_parser.py  lys.py  main.py  noise.py  profiling.sh
src/config/: ftqc.conf  scheduler.conf
src/cpp_compiler/: CMakeLists.txt  LysCompiler.cpp  LysCompiler.hpp  Measure.cpp  Measure.hpp  Operation.cpp  Operation.hpp  Rotation.cpp  Rotation.hpp  runLysCompiler.cpp
src/helpers/: paths.py  plot_scheduler_results.py  translate_results_to_measurement_based_circuit.py  utils.py
src/hla_scheduler/: QRE_report.py  experiments.py  hla_scheduler.py  hla_scheduler_default_params.json  scheduler_sampler.py
src/layout_processor/: adjacency_graph.py  graph.py  gui_create_sc_layout.py  magic_state_factory.py  patches.py  tile_layout.py
src/logger/: logger_config.py  src_logger_config.py
src/python_wrapper/: LysCompiler_cpp_interface.py  Measure.py  Operation.py
src/scheduler/: data_qubit_assignment.py  dependency_graph.py  steiner_tree_heuristic.py
src/transpiler/: circuit.py  rotation.py  run_circuit_cpp.py
tests/cpp_tests/: test_LysCompiler.cpp  test_Measure.cpp  test_Operation.cpp  test_Rotation.cpp
tests/layout_processor/: test_adjacency_graph.py
tests/python_tests/: test_Measure.py  test_Operation.py  test_Rotation.py
tests/scheduler/: test_schedule.py
tests/transpiler_tests/: random_qasm_runtime_tests.py  test_lys.py
tests/util_tests/: test_basis_conversion.py  test_parse.py
tests/worker_tests/: test_transpiler_node.py
transpiler/: Dockerfile_transpiler  config.py  transpiler_smoke_tests.py
transpiler/data/: payload.json  transpiler_input_test.qasm
transpiler/tests/: test_transpile.py
utils/: decompose.py  gridsynthEXE  parse.py  paths.py  translator_qasm2qiskit.py
worker/: ftqc_emulator_node.py  sk_node.jl  sk_node.py  transpiler_node.py
worker/ftqc_emulator/: requirements.txt
worker/sk_node/: requirements.jl  requirements.txt
worker/transpiler/: requirements.txt
(+80 files in other folders)
