[package]
name = "qarrot-optimizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1.0"
lazy_static = "1"
log = { version = "0.4", features = ["kv"] }
env_logger = "0.11"
num-traits = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
regex = "1"
uuid = "1"
fs2 = "0.4"
tempfile = "3"
memmap2 = "0.9"